bk_ida/gccida/c1/reg_is_born
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_is_born/src/local-alloc.c:2559:21: error: use of undeclared identifier 'machine_mode'
mark_life( rtint, ( machine_mode)*( ( unsigned __int8 *)reg + 2), 1); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_is_born/src/local-alloc.c:2561:26: error: use of undeclared identifier 'machine_mode'
post_mark_life( rtint, ( machine_mode)*( ( unsigned __int8 *)reg + 2), birth, 2 * this_insn_number, v3); 
                         ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_is_born/src/local-alloc.c:2568:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)reg + 2), 
  ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_is_born/src/local-alloc.c:2576:1: error: use of undeclared identifier 'qty_0'
qty_0[v4].death = -1; 
^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_is_born/src/obj/local-alloc.o] Error 1
